--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       <li>Turn over and fry for 2 minutes</li>
 
     </ol>
+    <h3>top 5 favorite food</h3>
+    <ol>
+      <li>Grilled cheese</li>
+      <li>sushi</li>
+      <li>banh mi</li>
+      <li>tomato soup</li>
+      <li>baba ghanoush</li>
+    </ol>
     
   </ul>
 
